优化索引管理、快搜